--- a/index.html
+++ b/index.html
@@ -64,14 +64,23 @@
         <div class="citat">"În fiecare sămânță există o promisiune de viață și de creștere. Cu răbdare, grijă și muncă asiduă, acea sămânță devine o recoltă bogată. Agricultura este arta de a transforma speranța în realitate și de a hrăni lumea."
             <div class="subcitat">-Tata</div>
         </div>
+    </div>
 
+    <div class="box">
         <div class="final">
+
             <div class="txt">E timpul sa ni te alaturi in aceasta aventura!</div>
-            <div class="subtxt">Inscrie-te sa putem astfel sa creem o comunitate frumoasa!</div>
+
+            <div class="subtxt">Inscrie-te sa putem astfel sa creem o comunitate frumoasa!
             <button class="butonas">Sign Up</button>
+            </div>
+
         </div>
     </div>
     </div>
+
+    
+    <div class="copyright">Copyright: The Odin Project!</div>
 
 
 
